--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   firebase_core: ^3.3.0
+  provider: ^6.1.2
+  firebase_auth: ^5.1.3
+  logger: ^2.4.0
 
 dev_dependencies:
   flutter_test:
