--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   provider: ^6.1.2
   firebase_auth: ^5.1.3
   logger: ^2.4.0
+  cloud_firestore: ^5.2.0
 
 dev_dependencies:
   flutter_test:
